--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,18 @@
 [build]
-  command = "npm run build"
-  publish = "frontend/build"
+  command = "npm install"
+  functions = "netlify/functions"
+  publish = "public"  # can be empty folder; functions are what we need
+
+# Optional: allow CORS preflight to be cached at edge -points Netlify to the functions folder
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
+
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+
+[[redirects]]
+  from = "/api/*"
+  to   = "/.netlify/functions/api/:splat"
+  status = 200
